# GptVsDeepSeek2025feb

./: CMakeLists.txt  CMakePresets.json  DeepSeekR1.cpp  GPTo3.cpp  README.md  main.cpp  vcpkg.json
